--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,9 @@ coverage-xml = "coverage xml"
 docs = "mkdocs serve"
 docs-build = "mkdocs build"
 build = "poetry build"
+check-ci = [ "check", "lint", "format-check" ]
+test-ci = [ "test-once", "coverage-xml" ]
+build-ci = ["docs-build", "build"]
 
 [tool.poetry.plugins."pytest11"]
 "decoy" = "decoy.pytest_plugin"
